--- a/css/styles.css
+++ b/css/styles.css
@@ -2,51 +2,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat:wght@100;200&display=swap");
 /* --- Botones --- */
-.boton-envio {
-  width: 100px;
+.boton, .boton-buscar, .boton-addcart, .boton-envio {
   height: 25px;
   text-align: center;
-  font-size: 14px;
+  padding: 0px;
+  vertical-align: middle;
   border-radius: 8px;
   border: 1px solid black;
   background-color: white;
   color: black;
-  margin-bottom: 25px;
+  font-size: 14px;
 }
-.boton-envio:hover {
+.boton:hover, .boton-buscar:hover, .boton-addcart:hover, .boton-envio:hover {
   background-color: black;
   color: white;
   border-color: black;
   border-style: solid;
+}
+
+.boton-envio {
+  width: 100px;
 }
 
 .boton-addcart {
   width: 120px;
-  height: 25px;
-  text-align: center;
-  font-size: 12px;
-  border-radius: 8px;
-  border: 1px solid black;
-  background-color: white;
-  color: black;
-}
-.boton-addcart:hover {
-  background-color: black;
-  color: white;
-  border-color: black;
-  border-style: solid;
 }
 
 .boton-buscar {
-  width: auto;
-  height: 25px;
-  text-align: center;
-  font-size: 14px;
-  border-radius: 8px;
-  border: 1px solid black;
-  background-color: white;
-  color: black;
-  padding-bottom: 25px;
+  width: 100px;
+  margin-top: 5px;
 }
 .boton-buscar:hover {
   background-color: grey;
@@ -136,9 +120,6 @@ body {
   .eventos__descripcion {
     width: auto;
     font-size: 18px;
-  }
-  .eventos__ubicacion {
-    width: 60px;
   }
   .productosDestacados__nombre {
     width: 100px;
@@ -276,9 +257,6 @@ body {
   .eventos__descripcion {
     width: 250px;
     font-size: 24px;
-  }
-  .eventos__ubicacion {
-    width: 180px;
   }
   .productosDestacados__nombre {
     width: 170px;
@@ -470,31 +448,33 @@ section article table {
   border-spacing: 3px;
 }
 
-.eventos__fecha {
-  width: 100px;
-  background-color: #451C17;
-  color: white;
-  border-color: white;
-  transition: all 1s;
-}
-.eventos__fecha:hover {
+.eventos__row-1 {
   background-color: rgb(234, 210, 172);
   color: black;
+  cursor: pointer;
+}
+.eventos__row-1:hover {
+  background-color: #bda09e;
+}
+
+.eventos__row-2 {
+  background-color: #451C17;
+  color: white;
+  cursor: pointer;
+}
+.eventos__row-2:hover {
+  background-color: #bda09e;
+}
+
+.eventos__fecha {
+  width: 100px;
+  border-color: white;
+  transition: all 1s;
 }
 
 .eventos__descripcion {
   width: 250px;
-  background-color: #451C17;
-  color: white;
   transition: all 1s;
-}
-.eventos__descripcion:hover {
-  background-color: rgb(234, 210, 172);
-  color: black;
-}
-
-.eventos__ubicacion {
-  width: 180px;
 }
 
 .evento__imgEvento {
