--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat:wght@100;200&display=swap");
 /* --- Botones --- */
-.boton, .boton-buscar, .boton-addcart, .boton-envio {
+.boton, .boton-miembro, .boton-buscar, .boton-addcart, .boton-envio {
   height: 25px;
   text-align: center;
   padding: 0px;
@@ -13,7 +13,7 @@
   color: black;
   font-size: 14px;
 }
-.boton:hover, .boton-buscar:hover, .boton-addcart:hover, .boton-envio:hover {
+.boton:hover, .boton-miembro:hover, .boton-buscar:hover, .boton-addcart:hover, .boton-envio:hover {
   background-color: black;
   color: white;
   border-color: black;
@@ -36,6 +36,14 @@
   background-color: grey;
   color: white;
   border-color: black;
+}
+
+.boton-miembro {
+  width: auto;
+  height: 40px;
+  font-size: 18px;
+  padding: 0px 5px;
+  background-color: rgb(194, 91, 91);
 }
 
 /* --- Fin Botones --- */
@@ -162,6 +170,10 @@ body {
   }
   #carrousel__large {
     display: none;
+    height: 250px;
+  }
+  .fieldContacto {
+    margin-right: 15%;
   }
 }
 /* --- Fin Mobile --- */
@@ -300,6 +312,10 @@ body {
   }
   #carrousel__large {
     display: block;
+    /*width: 25%;*/
+  }
+  .fieldContacto {
+    margin-right: 30%;
   }
 }
 /* --- Fin Desktop --- */
@@ -357,6 +373,7 @@ nav ul li {
 .body__img-portada {
   width: 40%;
   opacity: 85%;
+  margin-bottom: 30px;
 }
 
 h4 {
@@ -437,6 +454,7 @@ section article table {
   white-space: pre-wrap;
   word-wrap: break-word;
   margin-bottom: 0px;
+  margin-top: 0px;
   padding-bottom: 10px;
 }
 
@@ -545,8 +563,9 @@ legend {
 
 .basicForm {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-areas: "label input";
+  justify-content: space-evenly;
 }
 
 .fieldDomicilio {
@@ -645,6 +664,7 @@ input .boton-envio {
 }
 .carrousel__imagen:hover {
   opacity: 100%;
+  width: 200px;
 }
 
 .carrousel__imagen-lg {
