--- a/css/styles.css
+++ b/css/styles.css
@@ -47,33 +47,6 @@
 }
 
 /* --- Fin Botones --- */
-* {
-  margin: 0px;
-  padding: 0px;
-}
-
-header {
-  grid-area: "header";
-  background-color: rgb(234, 210, 172);
-  position: -webkit-sticky;
-  position: sticky;
-  z-index: 999; /*corregir*/
-  top: 1px;
-  margin: 0px;
-  padding: 0px;
-  text-align: center;
-  width: auto;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  letter-spacing: 1px;
-  margin: 0px;
-  padding: 0px;
-}
-
 /* ---Mobile--- */
 @media screen and (min-width: 320px) {
   #main {
@@ -319,6 +292,19 @@ body {
   }
 }
 /* --- Fin Desktop --- */
+header {
+  grid-area: "header";
+  background-color: rgb(234, 210, 172);
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 999; /*corregir*/
+  top: 1px;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  width: auto;
+}
+
 /*----Inicio diseño del header-----*/
 #header__logo {
   text-align: center;
@@ -359,6 +345,15 @@ body {
 }
 
 /*-----Fin del diseño del header-----*/
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 0px;
+  padding: 0px;
+}
+
 ul {
   list-style-type: none;
   text-transform: uppercase;
@@ -378,6 +373,19 @@ nav ul li {
 
 h4 {
   font-weight: bold;
+}
+
+.texto {
+  height: 26px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  margin: 5px;
+  border-radius: 5px;
+  transition: all 1s;
+}
+.texto:focus {
+  height: 24px;
+  font-size: 16px;
 }
 
 /*----Section----*/
@@ -421,6 +429,283 @@ section article table {
 }
 
 /*----Fin Section----*/
+/* Tienda de productos */
+#listadoProductos {
+  display: grid;
+  row-gap: 20px;
+}
+
+.listadoProductos__producto {
+  justify-content: center;
+  overflow: hidden;
+}
+
+.card {
+  border: none;
+}
+
+.card-img-top:hover {
+  /*background-color: lightgray;*/
+  transform: scale(1.1, 1.1);
+}
+
+.card-title {
+  text-align: center;
+}
+
+.card-text {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+/* Fin de Tienda de productos */
+/* --- Carrousel de imágenes --- */
+.carrousel__eventos {
+  text-align: center;
+}
+
+.carrousel__imagen {
+  width: 150px;
+  opacity: 70%;
+  border-color: white;
+  box-shadow: 10px 10px 7px -4px rgba(0, 0, 0, 0.75);
+  transition: all 1s;
+}
+.carrousel__imagen:hover {
+  opacity: 100%;
+  width: 200px;
+}
+
+.carrousel__imagen-lg {
+  width: 450px;
+}
+
+/* --- Fin Carrousel de imágenes --- */
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 0px;
+  padding: 0px;
+}
+
+ul {
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+nav ul li {
+  display: inline;
+  color: white;
+  margin: 10px 5px;
+}
+
+.body__img-portada {
+  width: 40%;
+  opacity: 85%;
+  margin-bottom: 30px;
+}
+
+h4 {
+  font-weight: bold;
+}
+
+.texto {
+  height: 26px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  margin: 5px;
+  border-radius: 5px;
+  transition: all 1s;
+}
+.texto:focus {
+  height: 24px;
+  font-size: 16px;
+}
+
+/*----Section----*/
+section {
+  grid-area: "section";
+  text-align: center;
+}
+section h3 {
+  color: #451C17;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-family: "Merienda", cursive;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  -webkit-animation-name: transparencia;
+          animation-name: transparencia;
+  -webkit-animation-iteration-count: 2;
+          animation-iteration-count: 2;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+section ol li {
+  display: inline;
+  background-color: rgb(234, 210, 172);
+}
+section article table {
+  letter-spacing: 1.5px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.section__banner {
+  background-repeat: no-repeat;
+  width: 100%;
+}
+
+/*----Fin Section----*/
+/* Tienda de productos */
+#listadoProductos {
+  display: grid;
+  row-gap: 20px;
+}
+
+.listadoProductos__producto {
+  justify-content: center;
+  overflow: hidden;
+}
+
+.card {
+  border: none;
+}
+
+.card-img-top:hover {
+  /*background-color: lightgray;*/
+  transform: scale(1.1, 1.1);
+}
+
+.card-title {
+  text-align: center;
+}
+
+.card-text {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+/* Fin de Tienda de productos */
+/* --- Carrousel de imágenes --- */
+.carrousel__eventos {
+  text-align: center;
+}
+
+.carrousel__imagen {
+  width: 150px;
+  opacity: 70%;
+  border-color: white;
+  box-shadow: 10px 10px 7px -4px rgba(0, 0, 0, 0.75);
+  transition: all 1s;
+}
+.carrousel__imagen:hover {
+  opacity: 100%;
+  width: 200px;
+}
+
+.carrousel__imagen-lg {
+  width: 450px;
+}
+
+/* --- Fin Carrousel de imágenes --- */
+/* --- Formulario --- */
+fieldset {
+  line-height: 30px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 20px auto;
+  padding: 0px 5px 5px 5px;
+}
+fieldset select option {
+  height: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+
+legend {
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  float: none;
+}
+
+.formContacto {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.form__textarea {
+  resize: none;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+}
+
+.basicForm {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-template-areas: "label input";
+  justify-content: space-evenly;
+}
+
+.fieldDomicilio {
+  grid-template-rows: repeat(7, auto);
+}
+
+.fieldDatosPersonales {
+  grid-template-rows: repeat(3, auto);
+}
+
+.fieldContacto {
+  border: none;
+}
+
+label {
+  grid-column: 1;
+  text-align: right;
+}
+
+input .texto {
+  grid-area: input;
+}
+input .boton-envio {
+  grid-area: submit;
+}
+
+/* --- Fin diseño formulario ---*/
+/*----Inicio diseño de footer----*/
+footer {
+  grid-area: "footer";
+  background-color: rgb(234, 210, 172);
+  padding: 5px 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  text-align: center;
+}
+footer h4 {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.footer__item {
+  height: 30px;
+  margin: 0px 5px;
+}
+
+.footer__contenido {
+  margin: 10px 0px;
+}
+
+/* --- Fin de diseño de footer --- */
 /* Prodcuctos destacados: index */
 #productosDestacados {
   display: flex;
@@ -504,174 +789,11 @@ section article table {
 }
 
 /* Fin eventos destacados*/
-/*----Inicio diseño de footer----*/
-footer {
-  grid-area: "footer";
-  background-color: rgb(234, 210, 172);
-  padding: 5px 20px;
-  display: flex;
-  flex-wrap: nowrap;
-  text-align: center;
-}
-footer h4 {
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 14px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-.footer__item {
-  height: 30px;
-  margin: 0px 5px;
-}
-
-.footer__contenido {
-  margin: 10px 0px;
-}
-
-/* --- Fin de diseño de footer --- */
-/* --- Formulario --- */
-fieldset {
-  line-height: 30px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 20px auto;
-  padding: 0px 5px 5px 5px;
-}
-fieldset select option {
-  height: 20px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-}
-
-legend {
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-  float: none;
-}
-
-.formContacto {
-  display: flex;
-  margin-bottom: 15px;
-}
-
-.form__textarea {
-  resize: none;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-}
-
-.basicForm {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-areas: "label input";
-  justify-content: space-evenly;
-}
-
-.fieldDomicilio {
-  grid-template-rows: repeat(7, auto);
-}
-
-.fieldDatosPersonales {
-  grid-template-rows: repeat(3, auto);
-}
-
-.fieldContacto {
-  border: none;
-}
-
-label {
-  grid-column: 1;
-  text-align: right;
-}
-
-input .texto {
-  grid-area: input;
-}
-input .boton-envio {
-  grid-area: submit;
-}
-
-/* --- Fin diseño formulario ---*/
-.texto {
-  height: 26px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  margin: 5px;
-  border-radius: 5px;
-  transition: all 1s;
-}
-.texto:focus {
-  height: 24px;
-  font-size: 16px;
-}
-
-/* Tienda de productos */
-#listadoProductos {
-  display: grid;
-  row-gap: 20px;
-}
-
-.listadoProductos__producto {
-  justify-content: center;
-  overflow: hidden;
-}
-
-/*.listadoProductos__producto:hover{
-    /*background-color: lightgray;
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-}*/
-/*.producto__img{
-    width: 120px;
-}
-
-.producto__img:hover{
-    /*background-color: lightgray;
-    -webkit-transform: scale(1, 1.2);
-    transform: scale(1, 1.2);
-}*/
-.card {
-  border: none;
-}
-
-.card-img-top:hover {
-  /*background-color: lightgray;*/
-  transform: scale(1.1, 1.1);
-}
-
-.card-title {
-  text-align: center;
-}
-
-.card-text {
-  font-weight: bold;
-  font-size: 16px;
-}
-
-/* Fin de Tienda de productos */
-/* --- Carrousel de imágenes --- */
-.carrousel__eventos {
-  text-align: center;
-}
-
-.carrousel__imagen {
-  width: 150px;
-  opacity: 70%;
-  border-color: white;
-  box-shadow: 10px 10px 7px -4px rgba(0, 0, 0, 0.75);
-  transition: all 1s;
-}
-.carrousel__imagen:hover {
-  opacity: 100%;
-  width: 200px;
-}
-
-.carrousel__imagen-lg {
-  width: 450px;
-}
-
-/* --- Fin Carrousel de imágenes --- */
 /* --- Keyframes --- */
 @-webkit-keyframes transparencia {
   0% {
