--- a/css/_buttons.scss
+++ b/css/_buttons.scss
@@ -20,12 +20,30 @@
 
 .boton-envio{
     @extend .boton;
-    width: 100px;
+    width: auto;
+    height: 30px;
+    padding: 0px 5px;
 }
 
 .boton-addcart{
     @extend .boton;
     width: 120px;
+
+    &:visited{
+        background-color: white;
+        color: black; 
+        border-style: none;
+    }
+
+    &:active{
+        background-color: gray;
+        border-style: none;
+    }
+
+    &:hover{
+        background-color: black;
+        color: white;
+    }
 }
 
 .boton-buscar{
