--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -21,11 +21,26 @@
 }
 
 .boton-envio {
-  width: 100px;
+  width: auto;
+  height: 30px;
+  padding: 0px 5px;
 }
 
 .boton-addcart {
   width: 120px;
+}
+.boton-addcart:visited {
+  background-color: white;
+  color: black;
+  border-style: none;
+}
+.boton-addcart:active {
+  background-color: gray;
+  border-style: none;
+}
+.boton-addcart:hover {
+  background-color: black;
+  color: white;
 }
 
 .boton-buscar {
