--- a/css/_media.scss
+++ b/css/_media.scss
@@ -57,6 +57,10 @@
         height: auto;
     }
 
+    .menubar__link-login{
+        display: block;
+    }
+
     #eventos{
         display: none;
     }
@@ -248,6 +252,10 @@
         height: 45px;
         align-content: center;
         justify-content: center;
+    }
+
+    .menubar__link-login{
+        display: none;
     }
 
     .eventos__fecha{
