--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -60,6 +60,10 @@
   padding: 0px 5px;
   background-color: rgb(194, 91, 91);
 }
+.boton-miembro:active {
+  background-color: white;
+  color: black;
+}
 
 /* --- Fin Botones --- */
 * {
