--- a/css/_destacados.scss
+++ b/css/_destacados.scss
@@ -5,11 +5,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    td{
+        text-align: center;
+    }
 }
 
 .productosDestacados__nombre{
-    text-align: center;
     vertical-align: bottom;
+    height: auto;
+}
+
+.productosDestacados__stars{
+    height: 20px;
+    display: none;
 }
 
 .productosDestacados__image{
@@ -18,7 +27,13 @@
     padding: 5px;
 
     &:hover{
-       width: 90%; 
+        width: 90%;
+        animation: transparencia 1s;
+    } 
+
+    &:hover + .productosDestacados__stars{
+        display: block;
+        animation: ver_puntuacion 1.5s;
     }
 }
 
@@ -89,10 +104,30 @@ $coloresMap: (fila1: $colorWine, fila2: $colorBeige);
 .evento__imgEvento{
     margin-bottom: 15px;
     transition: width 1s;
-
-    &:hover{
-        width: 450px;
-    }
 }
 
 /* Fin eventos destacados*/
+
+
+/* --- Keyframes --- */
+
+@keyframes transparencia {
+    0%{
+        opacity: 100%;
+    }
+    70%{
+        opacity: 80%;
+    }
+    100%{
+        opacity: 100%;
+    }
+}
+
+@keyframes ver_puntuacion {
+    0%{
+        height: 0px;
+    }
+    100%{
+        height: 20px;
+    }
+}
